# StaticProgramAnalyzer

./: .gitignore  README.md
Team35/Code35/src/spa/: CMakeLists.txt
Team35/Code35/src/spa/src/: DesignExtractor.cpp  PKB.cpp  PKB.h  Parser.cpp  Parser.h  TNode.h
Team35/Code35/src/spa/src/commons/: ASTNode.cpp  ASTNode.h  PairHash.h  SynonymHash.h  Token.cpp  Token.h  VectorStringHash.h  types.h
Team35/Code35/src/spa/src/commons/expr_parser/: ExprNode.cpp  ExprNode.h  ExprParser.cpp  ExprParser.h
Team35/Code35/src/spa/src/commons/expr_validator/: ExprValidator.cpp  ExprValidator.h
Team35/Code35/src/spa/src/commons/graph/: CFGraph.cpp  CFGraph.h  CFGraphNodeData.cpp  CFGraphNodeData.h  CallGraph.cpp  CallGraph.h  Graph.h
Team35/Code35/src/spa/src/commons/lexer/: ILexer.h  Lexer.cpp  Lexer.h  LexerException.cpp  LexerException.h  LexerFactory.cpp  LexerFactory.h
Team35/Code35/src/spa/src/commons/token/: Character.cpp  Character.h  Integer.cpp  Integer.h  Keyword.cpp  Keyword.h  Token.cpp  Token.h
Team35/Code35/src/spa/src/commons/token_scanner/: PQLTokenScanner.cpp  PQLTokenScanner.h  SimpleTokenScanner.cpp  SimpleTokenScanner.h  TokenScanner.cpp  TokenScanner.h
Team35/Code35/src/spa/src/commons/util/: ConversionUtil.cpp  ConversionUtil.h  SetUtil.h  StringUtil.h
Team35/Code35/src/spa/src/pkb/: PKB.cpp  PKB.h  PKBReader.cpp  PKBReader.h  PKBWriter.cpp  PKBWriter.h  Writer.cpp  Writer.h
Team35/Code35/src/spa/src/pkb/db/: AffectsGraph.cpp  AffectsGraph.h  CFGManager.cpp  CFGManager.h  EntityTable.h  PatternTable.cpp  (+2 more)
Team35/Code35/src/spa/src/qps/: QPS.cpp  QPS.h  QueryEvaluator.cpp  QueryEvaluator.h  dummy.cpp  dummy.h
Team35/Code35/src/spa/src/sp/: CFGraphBuilder.cpp  CFGraphBuilder.h  CallGraph.cpp  CallGraph.h  DesignExtractor.cpp  DesignExtractor.h  IParser.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  SourceProcessor.cpp  SourceProcessor.h  SourceValidator.cpp  SourceValidator.h  SyntaxValidator.cpp  SyntaxValidator.h
Team35/Code35/src/unit_testing/: CMakeLists.txt
Team35/Code35/src/unit_testing/src/: TestAST.cpp  TestHelper.cpp  TestHelper.h  TestPKBReader.cpp
Team35/Code35/src/unit_testing/src/pkb/: TestPKBReader.cpp  TestPKBWriter.cpp
Team35/Code35/src/unit_testing/src/qps/: TestMergeResult.cpp  TestQueryEval.cpp  TestQuerySyntaxValidator.cpp  TestResult.cpp
Team35/Code35/src/unit_testing/src/sp/: ASTPrinter.cpp  ASTPrinter.h  MockLexer.cpp  MockLexer.h  MockParser.cpp  MockParser.h  TestCFGraphBuilder.cpp  TestCallGraph.cpp  TestDesignExtractor.cpp  TestParser.cpp  TestSourceProcessor.cpp  TestSourceValidator.cpp  TestSyntaxValidator.cpp
(+286 files in other folders)
